On OpenCanada, added the possibility to avoid downloading if file exits

--- a/notebooks/HomelessDatasetAnalysis/death_by_various_factors/analysis.ipynb
+++ b/notebooks/HomelessDatasetAnalysis/death_by_various_factors/analysis.ipynb
@@ -377,7 +377,7 @@
    "source": [
     "outliers_month = data_by_month['Count'].describe()\n",
     "unique_month_of_death = data_by_month['Month of death'].unique()\n",
-    "outliers_month, unique_month_of_death\n"
+    "outliers_month, unique_month_of_death"
    ],
    "id": "10cfeeb1d7070c11",
    "outputs": [
@@ -475,8 +475,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-05T00:21:03.897746Z",
-     "start_time": "2024-07-05T00:21:03.883776Z"
+     "end_time": "2024-07-05T03:21:36.976301Z",
+     "start_time": "2024-07-05T03:21:36.957644Z"
     }
    },
    "cell_type": "code",
@@ -569,18 +569,21 @@
        "</div>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 12
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-05T03:21:38.347656Z",
+     "start_time": "2024-07-05T03:21:38.336823Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Check for missing values\n",
     "missing_values_demographics = data_by_demographics.isnull().sum()\n",
@@ -590,26 +593,69 @@
     "\n",
     "missing_values_demographics, duplicates_demographics\n"
    ],
-   "id": "4c73d1d56e328932"
+   "id": "4c73d1d56e328932",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(_id              0\n",
+       " Year of death    0\n",
+       " Age_group        0\n",
+       " Gender           0\n",
+       " Count            0\n",
+       " dtype: int64,\n",
+       " 0)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 13
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-05T03:21:41.361213Z",
+     "start_time": "2024-07-05T03:21:41.355189Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Verify data types\n",
     "data_types_demographics = data_by_demographics.dtypes\n",
     "\n",
     "data_types_demographics\n"
    ],
-   "id": "5efc26aa2c023006"
+   "id": "5efc26aa2c023006",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_id               int64\n",
+       "Year of death     int64\n",
+       "Age_group        object\n",
+       "Gender           object\n",
+       "Count             int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 14
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-05T03:21:44.108117Z",
+     "start_time": "2024-07-05T03:21:44.099446Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Identify outliers in the 'Count' column\n",
     "outliers_demographics = data_by_demographics['Count'].describe()\n",
@@ -620,7 +666,30 @@
     "\n",
     "outliers_demographics, unique_age_group_demographics, unique_gender_demographics\n"
    ],
-   "id": "2ad401dd5c4cf14"
+   "id": "2ad401dd5c4cf14",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(count    75.000000\n",
+       " mean     13.733333\n",
+       " std      16.414672\n",
+       " min       1.000000\n",
+       " 25%       2.000000\n",
+       " 50%       6.000000\n",
+       " 75%      19.500000\n",
+       " max      70.000000\n",
+       " Name: Count, dtype: float64,\n",
+       " array(['Unknown', '20-39', '60+', '40-59', '<20'], dtype=object),\n",
+       " array(['Female', 'Transgender', 'Male', 'Unknown'], dtype=object))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -665,27 +734,126 @@
    "id": "b45b01f0e62bb352"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-05T03:24:38.015374Z",
+     "start_time": "2024-07-05T03:24:38.003384Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Load the CSV file\n",
-    "file_path = '/mnt/data/homeless-deaths-by-cause.csv'\n",
-    "data_by_cause = pd.read_csv(file_path)\n",
-    "\n",
-    "# Display the first few rows of the dataset\n",
+    "filename = 'homeless-deaths-by-cause.csv'\n",
+    "data_by_cause = pd.read_csv(downloader.get_path_for_downloaded_file(filename))\n",
     "data_by_cause.head()\n"
    ],
-   "id": "b89b4aca5c0c73f3"
+   "id": "b89b4aca5c0c73f3",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   _id  Year of death          Cause_of_death Age_group  Gender  Count\n",
+       "0    1           2023  Cardiovascular Disease   Unknown    Male      1\n",
+       "1    2           2019                   Other     20-39    Male      1\n",
+       "2    3           2018                 Suicide     20-39    Male      1\n",
+       "3    4           2017                Accident     40-59    Male      2\n",
+       "4    5           2022                   Other     40-59  Female      1"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>Year of death</th>\n",
+       "      <th>Cause_of_death</th>\n",
+       "      <th>Age_group</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Cardiovascular Disease</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>20-39</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Suicide</td>\n",
+       "      <td>20-39</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Accident</td>\n",
+       "      <td>40-59</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>40-59</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 21
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-05T03:24:40.824272Z",
+     "start_time": "2024-07-05T03:24:40.816563Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Check for missing values\n",
     "missing_values = data_by_cause.isnull().sum()\n",
@@ -695,26 +863,71 @@
     "\n",
     "missing_values, duplicates\n"
    ],
-   "id": "49113b528e2d26c0"
+   "id": "49113b528e2d26c0",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(_id               0\n",
+       " Year of death     0\n",
+       " Cause_of_death    0\n",
+       " Age_group         0\n",
+       " Gender            0\n",
+       " Count             0\n",
+       " dtype: int64,\n",
+       " 0)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 22
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-05T03:24:43.589951Z",
+     "start_time": "2024-07-05T03:24:43.583553Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Verify data types\n",
     "data_types = data_by_cause.dtypes\n",
     "\n",
     "data_types\n"
    ],
-   "id": "270d5ba2125e86f"
+   "id": "270d5ba2125e86f",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_id                int64\n",
+       "Year of death      int64\n",
+       "Cause_of_death    object\n",
+       "Age_group         object\n",
+       "Gender            object\n",
+       "Count              int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 23
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-05T03:24:46.482658Z",
+     "start_time": "2024-07-05T03:24:46.475034Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Identify outliers in the 'Count' column\n",
     "outliers = data_by_cause['Count'].describe()\n",
@@ -726,7 +939,33 @@
     "\n",
     "outliers, unique_cause_of_death, unique_age_group, unique_gender\n"
    ],
-   "id": "f791f448def878c3"
+   "id": "f791f448def878c3",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(count    267.000000\n",
+       " mean       3.805243\n",
+       " std        5.949623\n",
+       " min        1.000000\n",
+       " 25%        1.000000\n",
+       " 50%        2.000000\n",
+       " 75%        3.500000\n",
+       " max       51.000000\n",
+       " Name: Count, dtype: float64,\n",
+       " array(['Cardiovascular Disease', 'Other', 'Suicide', 'Accident',\n",
+       "        'Infection', 'Cancer', 'Unknown', 'Drug Toxicity', 'Drug toxicity',\n",
+       "        'COVID-19', 'Pneumonia', 'Homicide'], dtype=object),\n",
+       " array(['Unknown', '20-39', '40-59', '60+', '<20'], dtype=object),\n",
+       " array(['Male', 'Female', 'Unknown'], dtype=object))"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 24
   },
   {
    "metadata": {},
